<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_parents_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen_p_63"
            android:layout_marginTop="@dimen/dimen_p_62"
            android:src="@drawable/logo_p" />

        <RelativeLayout
            android:id="@+id/wechat_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_parents_about"
            android:background="@color/color_white_p"
            android:padding="@dimen/dimen_p_15">

            <TextView
                style="@style/parent_settings_list_text"
                android:text="@string/parent_wechat_txt"
                tool:text="官方微信" />

            <TextView
                style="@style/parent_about_content_text"
                android:text="@string/parent_wechat_content_txt" />


        </RelativeLayout>

        <View
            android:id="@+id/view_line_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_p_1"
            android:layout_below="@id/wechat_layout"
            android:background="@color/color_e6e6e6_p" />

        <RelativeLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_line_1"
            android:background="@color/color_white_p"
            android:padding="@dimen/dimen_p_15">

            <TextView
                style="@style/parent_settings_list_text"
                android:text="@string/parent_phone_txt"
                tool:text="客服电话" />

            <TextView
                style="@style/parent_about_content_text"
                android:text="@string/parent_phone_content_txt" />

        </RelativeLayout>

        <View
            android:id="@+id/view_line_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_p_1"
            android:layout_below="@id/phone_layout"
            android:background="@color/color_e6e6e6_p" />

        <RelativeLayout
            android:id="@+id/qq_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_line_2"
            android:background="@color/color_white_p"
            android:padding="@dimen/dimen_p_15">

            <TextView
                style="@style/parent_settings_list_text"
                android:text="@string/parent_qq_txt"
                tool:text="QQ群" />

            <TextView
                style="@style/parent_about_content_text"
                android:text="@string/parent_qq_content_txt" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cluase_policy_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/qq_layout"
            android:layout_marginTop="@dimen/dimen_p_8"
            android:background="@color/color_white_p"
            android:padding="@dimen/dimen_p_8">

            <TextView
                android:id="@+id/login_out_name"
                style="@style/parent_settings_list_text"
                android:padding="@dimen/dimen_p_8"
                android:text="@string/parent_clause_and_policy_txt" />

            <include layout="@layout/my_parent_arrow" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
