<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:line_edit_text="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center_horizontal"-->
            <!--android:layout_marginTop="@dimen/dimen_p_56"-->
            <!--android:adjustViewBounds="true"-->
            <!--android:scaleType="centerCrop"-->
            <!--android:src="@drawable/logo_p"-->
            <!--/>-->
    <!--</ScrollView>-->
    <TextView
        android:id="@+id/forgetPasTv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_p_42"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dimen_p_17"
        android:gravity="center"
        android:text="@string/forget_pas_text"
        android:textColor="@color/color_333333_p"
        android:textSize="@dimen/dimen_p_12"
        />
    <TextView
        android:id="@+id/fastRegisteTv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_p_42"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dimen_p_17"
        android:gravity="center"
        android:text="@string/registe_text"
        android:textColor="@color/color_333333_p"
        android:textSize="@dimen/dimen_p_12"
        />
    <TextView
        android:id="@+id/loginTv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_p_48"
        android:layout_above="@id/forgetPasTv"
        android:background="@drawable/login_selector"
        android:gravity="center"
        android:text="@string/login_text"
        android:textColor="@color/color_white_p"
        android:textSize="@dimen/dimen_p_17"
        />
    <com.yanxiu.gphone.parent.view.LineEditText
        android:id="@+id/userInputEdit"
        style="@style/login_edit_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_p_48"
        android:layout_above="@+id/pasEdit"
        android:phoneNumber="true"
        android:hint="@string/please_input_phone"
        line_edit_text:bottomlinecolor="@color/color_e6e6e6_p"
        line_edit_text:drawableleftfocus="@drawable/phone_icon"
        line_edit_text:isneeddrawableleft="true"
        />
    <com.yanxiu.gphone.parent.view.LineEditText
        android:id="@+id/pasEdit"
        style="@style/login_edit_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_p_48"
        android:layout_above="@+id/loginTv"
        line_edit_text:drawableleftfocus="@drawable/password_icon"
        line_edit_text:isneeddrawableleft="true"
        android:hint="@string/please_input_pas"
        android:password="true"
        />
</RelativeLayout>