<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:line_edit_text="http://schemas.android.com/apk/res-auto"
       android:layout_width="match_parent"
       android:layout_height="match_parent">


    <com.yanxiu.gphone.parent.view.LineEditText
        android:id="@+id/bindAccountTv"
        style="@style/login_edit_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_p_50"
        android:layout_marginTop="@dimen/dimen_p_20"
        android:hint="@string/please_input_student_account"
        line_edit_text:bottomlinecolor="@color/color_e6e6e6_p"
        line_edit_text:isneeddrawablebottomline="false"
        line_edit_text:isneeddrawableleft="false"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bind_next_text_tag"
        android:layout_marginTop="@dimen/dimen_p_15"
        android:textSize="@dimen/dimen_p_15"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_p_10"
        android:paddingRight="@dimen/dimen_p_10"
        android:textColor="@color/color_333333_p"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <TextView
            android:id="@+id/bingNextTv"
            style="@style/login_next_btn_style"
            android:text="@string/next_text"
            />
    </LinearLayout>

</merge>