<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:line_edit_text="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yanxiu.gphone.parent.view.LineEditText
        android:id="@+id/inputPsw"
        style="@style/login_edit_style"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_p_20"
        android:layout_height="@dimen/dimen_p_50"
        android:hint="@string/set_input_pas"
        android:password="true"
        line_edit_text:bottomlinecolor="@color/color_e6e6e6_p"
        line_edit_text:isneeddrawableleft="false"
        />
    <com.yanxiu.gphone.parent.view.LineEditText
        android:id="@+id/confirmPsw"
        style="@style/login_edit_style"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_p_20"
        android:layout_height="@dimen/dimen_p_50"
        android:hint="@string/confirm_pas"
        android:password="true"
        line_edit_text:bottomlinecolor="@color/color_e6e6e6_p"
        line_edit_text:isneeddrawableleft="false"
        line_edit_text:isneeddrawablebottomline="false"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <TextView
            android:id="@+id/setNextTv"
            style="@style/login_next_btn_style"
            android:text="@string/next_text"
    />
    </LinearLayout>
</merge>