<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:line_edit_text="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.yanxiu.gphone.parent.view.LineEditText
        android:id="@+id/input_current_pwd"
        style="@style/parent_modify_pwd_text"
        android:hint="@string/input_current_pwd"
        android:layout_marginTop="@dimen/dimen_p_20"
        android:paddingRight="@dimen/dimen_p_40"
        line_edit_text:bottomlinecolor="@color/color_e6e6e6_p"
        line_edit_text:drawableleftfocus="@drawable/password_icon"
        line_edit_text:isneeddrawableleft="false" />

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_p_1"
        android:layout_below="@id/input_current_pwd"
        android:background="@color/color_e6e6e6_p"
        android:id="@+id/view_line_1"/>-->


    <com.yanxiu.gphone.parent.view.LineEditText
        android:id="@+id/input_new_pwd"
        android:layout_below="@id/input_current_pwd"
        style="@style/parent_modify_pwd_text"
        android:hint="@string/input_new_pwd"
        android:paddingRight="@dimen/dimen_p_40"
        line_edit_text:bottomlinecolor="@color/color_e6e6e6_p"
        line_edit_text:drawableleftfocus="@drawable/password_icon"
        line_edit_text:isneeddrawableleft="false" />

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_p_1"
        android:layout_below="@id/input_new_pwd"
        android:background="@color/color_e6e6e6_p"
        android:id="@+id/view_line_2"/>-->

    <com.yanxiu.gphone.parent.view.LineEditText
        android:id="@+id/input_new_pwd_again"
        android:layout_below="@id/input_new_pwd"
        style="@style/parent_modify_pwd_text"
        android:hint="@string/input_new_pwd_again"
        android:paddingRight="@dimen/dimen_p_40"
        line_edit_text:bottomlinecolor="@color/color_e6e6e6_p"
        line_edit_text:drawableleftfocus="@drawable/password_icon"
        line_edit_text:isneeddrawableleft="false" />

</RelativeLayout>