<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/week_report_exercise_layout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white_p"
                android:paddingBottom="@dimen/dimen_p_15"
                xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@+id/week_report_exercise_iv"
               android:layout_width="@dimen/dimen_p_38"
               android:layout_height="@dimen/dimen_p_38"
               android:layout_alignParentLeft="true"
               android:layout_alignParentTop="true"
               android:layout_margin="@dimen/dimen_p_10"
               android:src="@drawable/parent_exercise_icon"/>
    <TextView
        android:id="@+id/week_report_exercise_tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_p_38"
        android:layout_alignBottom="@id/week_report_exercise_iv"
        android:layout_alignTop="@id/week_report_exercise_iv"
        android:layout_toRightOf="@+id/week_report_exercise_iv"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/yanxiu_parent_exercise_txt"
        android:textColor="@color/color_994d4d_p"
        android:textSize="@dimen/dimen_p_15"
        android:textStyle="bold"
        />
    <TextView android:id="@+id/current_exercise_tv"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_alignLeft="@+id/week_report_exercise_iv"
              android:layout_below="@+id/week_report_exercise_iv"
              android:layout_marginTop="@dimen/dimen_p_8"
              android:gravity="center_vertical"
              android:singleLine="true"
              android:text="@string/yanxiu_parent_current_exercise_txt"
              android:textColor="@color/color_a0a0a0_p"
              android:textSize="@dimen/dimen_p_12"
        />
    <TextView android:id="@+id/current_exercise_finished_tv"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_alignLeft="@+id/week_report_exercise_iv"
              android:layout_below="@+id/current_exercise_tv"
              android:layout_marginTop="@dimen/dimen_p_10"
              android:layout_toLeftOf="@+id/current_exercise_center_line"
              android:gravity="left|center_vertical"
              android:maxLines="2"
              android:singleLine="false"
              android:text="@string/yanxiu_parent_current_exercise_finished_txt"
              android:textColor="@color/color_333333_p"
              android:textSize="@dimen/dimen_p_12"
        />
    <TextView android:id="@+id/current_exercise_right_tv"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignLeft="@+id/week_report_exercise_iv"
              android:layout_below="@+id/current_exercise_finished_tv"
              android:layout_marginTop="@dimen/dimen_p_10"
              android:layout_toLeftOf="@+id/current_exercise_center_line"
              android:gravity="left|center_vertical"
              android:maxLines="2"
              android:singleLine="false"
              android:text="@string/yanxiu_parent_current_exercise_right_txt"
              android:textColor="@color/color_333333_p"
              android:textSize="@dimen/dimen_p_12"
        />
    <TextView android:id="@+id/current_exercise_orders_tv"
              android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:layout_alignLeft="@+id/week_report_exercise_iv"
              android:layout_below="@+id/current_exercise_right_tv"
              android:layout_marginTop="@dimen/dimen_p_10"
              android:gravity="center_vertical"
              android:singleLine="true"
              android:text="@string/yanxiu_parent_current_exercise_orders_txt"
              android:textColor="@color/color_333333_p"
              android:textSize="@dimen/dimen_p_16"
              android:visibility="gone"
        />
    <com.yanxiu.gphone.parent.view.YanxiuParentTypefaceTextView
        android:id="@+id/current_exercise_orders_really_tv"
        app:type_p_face="MetroPlayType.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/current_exercise_right_tv"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/current_exercise_center_line"
        android:gravity="center"
        android:singleLine="true"
        android:text="23586"
        android:textColor="@color/color_333333_p"
        android:textSize="@dimen/dimen_p_30"
        />
    <View android:id="@+id/current_exercise_center_line"
          android:layout_width="@dimen/dimen_p_1" android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/current_exercise_right_tv"
          android:layout_alignTop="@+id/current_exercise_tv"
          android:layout_centerInParent="true"
          android:background="@color/color_ebebeb_p"
        />
    <TextView android:id="@+id/current_all_world_orders_tv"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:layout_below="@+id/week_report_exercise_iv"
              android:layout_marginTop="@dimen/dimen_p_8"
              android:layout_toRightOf="@+id/current_exercise_center_line"
              android:gravity="center"
              android:singleLine="true"
              android:text="@string/yanxiu_parent_current_all_world_orders_txt"
              android:textColor="@color/color_a0a0a0_p"
              android:textSize="@dimen/dimen_p_12"
        />
</RelativeLayout>