<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/error"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/color_ccffffff"
    android:visibility="visible">

    <RelativeLayout
        android:id="@+id/error_child_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_p_40"
        android:layout_marginRight="@dimen/dimen_p_40"
        android:background="@drawable/parent_error_bg"
        android:paddingTop="@dimen/dimen_p_15"
        android:visibility="gone">
        <ImageView
            android:id="@+id/net_error_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dimen_p_5"/>
        <TextView
            android:id="@+id/errorTxt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/net_error_flag"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/dimen_p_10"
            android:paddingBottom="@dimen/dimen_p_25"
            android:paddingLeft="@dimen/dimen_p_20"
            android:paddingRight="@dimen/dimen_p_20"
            android:singleLine="false"
            android:gravity="center"
            android:text="@string/public_loading_net_errtxt_p"
            android:textColor="@color/color_white_p"
            android:textSize="@dimen/dimen_p_15"/>
        <View
            android:id="@+id/dividerLine"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_p_1"
            android:layout_below="@id/errorTxt1"
            android:background="@color/color_666666_p"/>
        <TextView
            android:id="@+id/try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dividerLine"
            android:layout_centerInParent="true"
            android:paddingTop="@dimen/dimen_p_15"
            android:paddingBottom="@dimen/dimen_p_15"
            android:gravity="center"
            android:minEms="6"
            android:textSize="@dimen/dimen_p_15"
            android:text="@string/refresh_connect_p"
            android:textColor="@color/color_b28f47_p"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/errorTxt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/color_333333_p"
        android:background="@drawable/loading_data_null_bg"
        android:padding="@dimen/dimen_p_10"
        android:text="@string/public_loading_data_null_p"
        android:textSize="@dimen/dimen_p_15"
        android:visibility="gone"/>
</RelativeLayout>